Set color of selectbox

--- a/priv/lib-src/_elements.form.scss
+++ b/priv/lib-src/_elements.form.scss
@@ -41,6 +41,7 @@ form {
         height: 4.5rem;
         padding: 0 3rem 0 1.5rem;
         border: 2px solid var(--darkTheme);
+        color: var(--typographyColor);
     }
 
     input[type="date"].form-control,
