--- a/priv/lib-src/_components.footer.scss
+++ b/priv/lib-src/_components.footer.scss
@@ -62,6 +62,12 @@ body.color--flagBrown {
     }
 }
 
+.c-footer__top {
+    svg {
+        display: none;
+    }
+}
+
 @media (hover: none) {
     .c-footer__top {
         display: flex;
