--- a/priv/lib-src/_components.calendar.scss
+++ b/priv/lib-src/_components.calendar.scss
@@ -136,6 +136,10 @@
     margin: 0 0 1em;
 }
 
+.c-calendar-item__details-toggle {
+    color: var(--typographyColor);
+}
+
 .c-calendar-item__details {
     width: 90%;
     max-width: 70ch;
