Change background of select

--- a/priv/lib/css/style.css
+++ b/priv/lib/css/style.css
@@ -720,6 +720,7 @@ form select {
   padding: 0 3rem 0 1.5rem;
   border: 2px solid var(--darkTheme);
   color: var(--typographyColor);
+  background: var(--bodyBg);
 }
 form input[type=date].form-control,
 form input[type=date],
