--- a/priv/lib-src/_elements.form.scss
+++ b/priv/lib-src/_elements.form.scss
@@ -42,6 +42,7 @@ form {
         padding: 0 3rem 0 1.5rem;
         border: 2px solid var(--darkTheme);
         color: var(--typographyColor);
+        background: var(--bodyBg);
     }
 
     input[type="date"].form-control,
