een verkeerde commit

--- a/priv/lib-src/_components.buttons.scss
+++ b/priv/lib-src/_components.buttons.scss
@@ -30,6 +30,7 @@ button {
             position: relative;
             top: -2px;
             margin-right: 1rem;
+            // display: block;
         }
     }
 
