--- a/priv/lib-src/_components.keyword-list.scss
+++ b/priv/lib-src/_components.keyword-list.scss
@@ -14,17 +14,35 @@
     border-radius: 4px;
     border: none;
     line-height: 1.4;
+    text-decoration: none;
     text-underline-offset: 1px;
     border: 1px solid color-mix(in srgb, var(--typographyColor), var(--bodyBg) 90%);
 
+    @include setInteractive {
+        border-color: color-mix(in srgb, var(--typographyColor), var(--bodyBg) 80%);
+        background: color-mix(in srgb, var(--typographyColor), var(--bodyBg) 80%);
+    }
+
     &.-tickets {
-        background: light-dark(var(--flagYellow), color-mix(in srgb, var(--flagYellow), var(--bodyBg) 30%));
+        background: light-dark(var(--flagYellow), color-mix(in srgb, var(--flagYellow), var(--bodyBg) 68%));
         border: 1px solid light-dark(var(--flagYellow), color-mix(in srgb, var(--flagYellow), var(--bodyBg) 30%));
+        text-decoration: underline;
+
+        @include setInteractive {
+            text-decoration: none;
+            background: color-mix(in srgb, var(--flagYellow), var(--bodyBg) 30%);
+        }
     }
 
     &.-signup {
-        background: light-dark(var(--flagPurple), color-mix(in srgb, var(--flagPurple), var(--bodyBg) 30%));
+        background: light-dark(var(--flagPurple), color-mix(in srgb, var(--flagPurple), var(--bodyBg) 61%));
         border: 1px solid light-dark(var(--flagPurple), color-mix(in srgb, var(--flagPurple), var(--bodyBg) 30%));
+        text-decoration: underline;
+
+        @include setInteractive {
+            text-decoration: none;
+            background: color-mix(in srgb, var(--flagPurple), var(--bodyBg) 30%);
+        }
     }
 
     &.-desc {
