--- a/priv/lib-src/_components.calendar.scss
+++ b/priv/lib-src/_components.calendar.scss
@@ -126,7 +126,7 @@
             text-decoration: none;
 
             &:before {
-                width: 110%;
+                width: calc(100% + 1rem);
             }
         }
     }
