Dont show months if there is no result

--- a/priv/lib/css/style.css
+++ b/priv/lib/css/style.css
@@ -1199,7 +1199,7 @@ body.color--flagBrown .c-btn-add-event path {
   .c-filters__keywords {
     width: fit-content;
     flex-flow: row nowrap;
-    margin: 0;
+    margin: 0 0 0 auto;
   }
   .c-filters__keywords label {
     width: auto;
