--- a/priv/lib-src/_components.filters.scss
+++ b/priv/lib-src/_components.filters.scss
@@ -28,7 +28,7 @@
     @include breakpoint($mediumBreakpoint) {
         width: fit-content;
         flex-flow: row nowrap;
-        margin: 0;
+        margin: 0 0 0 auto;
 
         label {
             width: auto;
