Some refactoring and add total in month divider

--- a/priv/lib-src/_components.calendar.scss
+++ b/priv/lib-src/_components.calendar.scss
@@ -51,6 +51,13 @@ body .c-calendar:last-of-type .c-calendar__divider__next {
         margin: 0;
     }
 
+    sup {
+        left: -1em;
+        top: -1.3em;
+        font-size: 0.42em;
+        letter-spacing: -0.1em;
+    }
+
     @container scroll-state(stuck: top) {
         .c-calendar__divider__next {
             opacity: 1;
