--- a/priv/lib/css/style.css
+++ b/priv/lib/css/style.css
@@ -1075,28 +1075,26 @@ body .c-calendar:last-of-type .c-calendar__divider__next {
 
 .c-calendar__divider__next {
   display: flex;
+  flex-flow: column;
   align-items: center;
-  gap: 1rem;
-  font-size: 0.9em;
+  justify-content: center;
+  width: 4.5rem;
+  height: 4.5rem;
+  padding-right: 0.5em;
+  font-size: 9px;
+  line-height: 1.4;
   transition: opacity 0.3s;
 }
 @supports (container-type: scroll-state) {
   .c-calendar__divider__next {
-    opacity: 0;
+    opacity: 1;
   }
-}
-.c-calendar__divider__next:after {
-  content: "";
-  width: 0.6em;
-  height: 0.6em;
-  border-bottom: 2px solid var(--darkTheme);
-  border-right: 2px solid var(--darkTheme);
-  rotate: 45deg;
 }
 .c-calendar__divider__next svg {
   width: 16px;
   height: 16px;
   fill: var(--darkTheme);
+  rotate: 180deg;
 }
 
 .c-calendar-item {
@@ -1247,6 +1245,8 @@ body .c-calendar:last-of-type .c-calendar__divider__next {
 }
 
 .c-calendar__empty {
+  width: fit-content;
+  max-width: 70ch;
   padding: 1em;
   background: var(--lightTheme);
   color: light-dark(var(--darkTheme), var(--typographyColor));
