--- a/priv/lib-src/_settings.variables.scss
+++ b/priv/lib-src/_settings.variables.scss
@@ -69,8 +69,14 @@ body {
 
     --mainMargin: 4rem;
 
-    --lightTheme: color-mix(in srgb, var(--theme), var(--bodyBg) 90%);
-    --darkTheme: color-mix(in srgb, var(--theme), black 30%);
+    --lightTheme: #FFEEEF;
+    --darkTheme: #B23D40;
+
+    @supports (color: color-mix(in srgb, red, white)) {    
+        --lightTheme: color-mix(in srgb, var(--theme), var(--bodyBg) 90%);
+        --darkTheme: color-mix(in srgb, var(--theme), black 30%);
+    }
+    
 
     &.color--flagBrown {
         --lightTheme: light-dark(color-mix(in srgb, var(--theme), var(--bodyBg) 90%), color-mix(in srgb, var(--theme), black 20%));
