--- a/priv/lib-src/_components.keyword-list.scss
+++ b/priv/lib-src/_components.keyword-list.scss
@@ -10,39 +10,64 @@
     display: inline-flex;
     padding: 0.2rem 0.7rem;
     margin-bottom: 0.2rem;
-    background: color-mix(in srgb, var(--typographyColor), var(--bodyBg) 90%);
+    background: #ccc;
     border-radius: 4px;
     border: none;
     line-height: 1.4;
     text-decoration: none;
     text-underline-offset: 1px;
-    border: 1px solid color-mix(in srgb, var(--typographyColor), var(--bodyBg) 90%);
+    border: 1px solid #666;
+
+    @supports (color: color-mix(in srgb, red, white)) {
+        background: color-mix(in srgb, var(--typographyColor), var(--bodyBg) 90%);
+        border: 1px solid color-mix(in srgb, var(--typographyColor), var(--bodyBg) 90%);
+    }
 
     &.-tickets {
-        background: light-dark(var(--flagYellow), color-mix(in srgb, var(--flagYellow), var(--bodyBg) 68%));
-        border: 1px solid light-dark(var(--flagYellow), color-mix(in srgb, var(--flagYellow), var(--bodyBg) 30%));
+        background: var(--flagYellow);
+        border: 1px solid var(--flagYellow);
         text-decoration: underline;
 
+        @supports (color: light-dark(black, white)) {
+            background: light-dark(var(--flagYellow), color-mix(in srgb, var(--flagYellow), var(--bodyBg) 68%));
+            border: 1px solid light-dark(var(--flagYellow), color-mix(in srgb, var(--flagYellow), var(--bodyBg) 30%));    
+        }
+        
         @include setInteractive {
             text-decoration: none;
-            background: color-mix(in srgb, var(--flagYellow), var(--bodyBg) 30%);
+            background: #FEF8EA;
+            
+            @supports (color: color-mix(in srgb, red, white)) {
+                background: color-mix(in srgb, var(--flagYellow), var(--bodyBg) 30%);
+            }
         }
     }
 
     &.-signup {
-        background: light-dark(var(--flagPurple), color-mix(in srgb, var(--flagPurple), var(--bodyBg) 61%));
-        border: 1px solid light-dark(var(--flagPurple), color-mix(in srgb, var(--flagPurple), var(--bodyBg) 30%));
+        background: var(--flagPurple);
+        border: 1px solid var(--flagPurple);
         text-decoration: underline;
+
+        @supports (color: light-dark(black, white)) {
+            background: light-dark(var(--flagPurple), color-mix(in srgb, var(--flagPurple), var(--bodyBg) 61%));
+            border: 1px solid light-dark(var(--flagPurple), color-mix(in srgb, var(--flagPurple), var(--bodyBg) 30%));
+        }
 
         @include setInteractive {
             text-decoration: none;
-            background: color-mix(in srgb, var(--flagPurple), var(--bodyBg) 30%);
+            background: #F9F5FD;
+            
+            @supports (color: color-mix(in srgb, red, white)) {
+                background: color-mix(in srgb, var(--flagPurple), var(--bodyBg) 30%);
+            }
         }
     }
 
     &.-desc {
         display: inline-flex;
+        align-items: center;
         gap: 0.4em;
+        flex-shrink: 0;
         padding: 0.2rem 0.7rem 0.2rem 0.4rem;
         position: relative;
         color: var(--darkTheme);
@@ -55,7 +80,9 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            width: 10px;
             width: 1.2lh;
+            height: 10px;
             height: 1.2lh;
             color: white;
             background: var(--darkTheme);
