Remove supports query popover, too tight

--- a/priv/lib-src/_components.share-event.scss
+++ b/priv/lib-src/_components.share-event.scss
@@ -72,9 +72,9 @@
     text-transform: none;
 }
 
-@supports not (anchor-name: --popover) {
-    .c-share-event,
-    .c-share-event-toggle {
-        display: none;
-    }
-}
+// @supports not (anchor-name: --popover) {
+//     .c-share-event,
+//     .c-share-event-toggle {
+//         display: none;
+//     }
+// }
