--- a/priv/lib-src/_elements.body.scss
+++ b/priv/lib-src/_elements.body.scss
@@ -4,10 +4,12 @@ html {
     scroll-behavior: smooth;
     font-size: 10px;
     color-scheme: light dark;
+
 }
 
 *, *:before, *:after {
     box-sizing: inherit;
+    outline-color: #32a1ce;
 }
 
 @view-transition {
