--- a/priv/lib-src/_elements.body.scss
+++ b/priv/lib-src/_elements.body.scss
@@ -1,10 +1,12 @@
 html {
     height: 100%;
     box-sizing: border-box;
-    scroll-behavior: smooth;
     font-size: 10px;
     color-scheme: light dark;
 
+    @media (prefers-reduced-motion: no-preference){
+        scroll-behavior: smooth;
+    }
 }
 
 *, *:before, *:after {
